@@ -1,5 +1,14 @@
 2001-05-28  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
+	* doc/other_documentation.dox: Don't include "CppUnit" in
+	anchor text, since Doxygen puts its own anchor around it.
+
+	* doc/Makefile.am (html/index.html): Depend on
+	other_documentation.dox.
+
+	* doc/Doxyfile.in (EXCLUDE): Move config.h and estring.h to
+	EXCLUDE_PATTERNS; they were not being excluded.
+
 	* ChangeLog: Reformat all entries to start with <TAB>.  See
 	<http://www.red-bean.com/cvs2cl/changelogs.html> for change log
 	format.
